# lox-lang

./: .gitignore  .prettierrc.toml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
interpreter/: .swcrc  demo.lox  package-lock.json  package.json  tsconfig.json
interpreter/src/: ast.ts  main.ts  vm.ts
tree-sitter-lox/: Cargo.toml  grammar.js  package-lock.json  package.json
tree-sitter-lox/src/: grammar.json  node-types.json  parser.c
