[package]
categories = ["parsing", "text-editors"]
description = "lox grammar for the tree-sitter parsing library"
edition = "2018"
keywords = ["incremental", "parsing", "lox"]
license = "MIT"
name = "tree-sitter-lox"
repository = "https://github.com/tree-sitter/tree-sitter-lox"
version = "0.0.1"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
